# admin-module

./: .dockerignore  .env  Caddyfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml
alembic/: env.py
alembic/versions/: 0001_init.py
docs/: ARCHITECTURE.md  BACKEND.md  DEPLOYMENT.md  FRONTEND.md
postgres-init/: init-extra.sql
src/: Dockerfile  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/app/: main.py
src/app/api/routes/: admin.py  auth.py  db_admin.py  users.py
src/app/core/: config.py  db.py  db_init.py  security.py
src/app/models/: base.py  user.py
src/app/schemas/: user.py
src/app/services/: user_service.py
src/app/ui/static/css/: animations.css  styles.css  tailwind-input.css  theme.css
src/app/ui/static/js/: main.js
src/app/ui/templates/: base.html
src/app/ui/templates/admin/: dashboard.html  login.html  not_authenticated.html  profile.html  register.html
src/frontend/admin-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.cjs
src/frontend/admin-frontend/src/: App.tsx
src/frontend/admin-frontend/src/pages/: Dashboard.tsx  DbBrowser.tsx  Login.tsx  Migrations.tsx  NotAuthenticated.tsx  Profile.tsx  Register.tsx
src/frontend/admin-frontend/src/routes/: AppRoutes.tsx
src/frontend/admin-frontend/src/services/: api.ts
src/frontend/admin-frontend/src/styles/: legacy.css
src/frontend/admin-frontend/src/ui/: Layout.tsx
src/tests/: test_auth_me.py  test_migrations_api.py
