[project]
name = "admin-module"
version = "0.1.0"
authors = [
    { name = "Egor", email = "dontmover@duck.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "jinja2",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]
