[project]
name = "admin-module"
version = "0.1.0"
authors = [
    { name = "Egor", email = "dontmover@duck.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator",
    "python-jose[cryptography]",
    "python-multipart",
    "alembic",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
